--- a/app/src/main/res/layout/activity_visite.xml
+++ b/app/src/main/res/layout/activity_visite.xml
@@ -97,4 +97,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.205" />
+
+    <Button
+        android:id="@+id/buttonVisiteReturn"
+        android:layout_width="82dp"
+        android:layout_height="36dp"
+        android:text="Back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
