--- a/app/src/main/res/layout/activity_praticien.xml
+++ b/app/src/main/res/layout/activity_praticien.xml
@@ -118,12 +118,23 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewVisites"
-        android:layout_width="254dp"
-        android:layout_height="280dp"
+        android:layout_width="253dp"
+        android:layout_height="196dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.417"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.944" />
+        app:layout_constraintVertical_bias="0.618" />
+
+    <Button
+        android:id="@+id/buttonCreateVisite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Créer une visite"
+        android:textColorHighlight="#A6A6A6"
+        android:textColorLink="#A6A6A6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
